# is-skeletons-grouper

./: .clang-format  CMakeLists.txt  Dockerfile  Dockerfile.dev  README.md  bootstrap.sh  build.sh  conanfile.py  conanfile.txt  configure.py  debugger.cpp  group_dataset.cpp  options.json  options.proto  pack.sh  service.cpp  skeletons.proto  skeletons_group.proto  skeletons_grouper.cpp  skeletons_grouper.hpp  skeletons_utils.cpp  skeletons_utils.hpp  stream_pb.cpp  stream_pb.hpp  vision.cpp  vision.hpp
etc/conf/: options.json  rpc_options.json
etc/docker/: Dockerfile  Dockerfile.dev  pack.sh
etc/k8s/: rpc_deployment.yaml
etc/rpc_example/: configure.py  requiriments.txt
src/is/conf/: options.proto
src/is/skeletons-grouper/: CMakeLists.txt  rpc.cpp  service.cpp
src/is/utils/: CMakeLists.txt  skeletons-grouper.cpp  skeletons-grouper.hpp  utils.cpp  utils.hpp  vision.cpp
utils/: CMakeLists.txt  options.proto  skeletons_grouper.cpp  skeletons_grouper.hpp  utils.cpp  utils.hpp
